--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,11 +3,15 @@ image: maven:3-jdk-8
 include:
   - template: Code-Quality.gitlab-ci.yml
 
+before_script:
+  - apt-get update -qy
+  - apt-get install -y ruby-dev
+  - gem install dpl
+
 stages:
   - build
   - test
   - deploy
-  # - execute
 
 build-job:
   stage: build
