--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,6 @@
-image: maven:3-jdk-8
+services:
+  - name: maven:3-jdk-8
+  - name: node:latest
 
 include:
   - template: Code-Quality.gitlab-ci.yml
