changed image link

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: "https://hub.docker.com/repository/docker/rkmarechal/debian-env:latest"
+image: rkmarechal/debian-env
 
 include:
   - template: Code-Quality.gitlab-ci.yml
