--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,11 @@
-image: rkmarechal/debian-env
+image: debian:stable
 
 include:
   - template: Code-Quality.gitlab-ci.yml
 
 before_script:
-  - apt-get update -qy
+  - echo "Updating package index" && echo deb http://ftp.de.debian.org/debian buster main > /etc/apt/sources.list.d/buster-main.list
+  - echo "Updating packages" && apt-get update -qy
   - apt-get install -y ruby-dev
   - gem install dpl
 
