added gem installation + deploy to heruk command

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,11 +6,11 @@ include:
 before_script:
   # - echo "Updating package index" && echo deb http://ftp.de.debian.org/debian buster main > /etc/apt/sources.list.d/buster-main.list
   - echo "Updating packages" && apt-get update -qy
-  - echo "Installing curl command" && apt-get install curl -y
+  - echo "Installing utility commands" && apt-get install curl gem -y
   - echo "Installing OpenJDK11 JRE" && apt-get install default-jdk -y
   - echo "Installing Maven" && apt install maven -y
   - echo "Installing nodejs and npm" && apt install nodejs npm -y
-  - echo "Installing heroku" && curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
+  - echo "Installing heroku" && curl https://cli-assets.heroku.com/install-ubuntu.sh | sh && gem install dpl
 
 stages:
   - build
@@ -33,15 +33,21 @@ test-job:
 
 deploy-server-job:
   stage: deploy
+  variables:
+    HEROKU_API_KEY: $HEROKU_API_KEY
   script:
-    - echo "Deploying server from $CI_COMMIT_BRANCH branch to heroku minihearthstone-server"
+    - echo "Deploying server from $CI_COMMIT_BRANCH branch to heroku $HEROKU_APP_SERVER"
+    - dpl --provider=heroku --app=$HEROKU_APP_SERVER --api-key=$HEROKU_API_KEY
   only:
     - master
 
 deploy-client-job:
   stage: deploy
+  variables:
+    HEROKU_API_KEY: $HEROKU_API_KEY
   script:
-    - echo "Deploying client from $CI_COMMIT_BRANCH branch to heroku minihearthstone-server"
+    - echo "Deploying client from $CI_COMMIT_BRANCH branch to heroku $HEROKU_APP_CLIENT"
+    - - dpl --provider=heroku --app=$HEROKU_APP_CLIENT --api-key=$HEROKU_API_KEY
   only:
     - master
 
