--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,9 +10,9 @@ before_script:
   - echo "Installing OpenJDK11 JRE" && apt-get install default-jdk -y
   - echo "Installing Maven" && apt install maven -y
   - echo "Installing nodejs and npm" && apt install nodejs npm -y
-  - # echo "Installing heroku" && curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
-  - # echo "Installing ruby and gem" && apt-get install -y ruby-dev
-  - # gem install dpl
+  # - echo "Installing heroku" && curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
+  # - echo "Installing ruby and gem" && apt-get install -y ruby-dev
+  # - gem install dpl
   - npm install -g heroku-cli
 
 stages:
@@ -40,7 +40,7 @@ deploy-server-job:
     HEROKU_API_KEY: $HEROKU_API_KEY
   script:
     - echo "Deploying server from $CI_COMMIT_BRANCH branch to heroku $HEROKU_APP_SERVER"
-    - # dpl --provider=heroku --app=$HEROKU_APP_SERVER --api-key=$HEROKU_API_KEY
+    # - dpl --provider=heroku --app=$HEROKU_APP_SERVER --api-key=$HEROKU_API_KEY
     - heroku git:remote -a $HEROKU_APP_SERVER
     - git push heroku master
   only:
@@ -52,7 +52,7 @@ deploy-client-job:
     HEROKU_API_KEY: $HEROKU_API_KEY
   script:
     - echo "Deploying client from $CI_COMMIT_BRANCH branch to heroku $HEROKU_APP_CLIENT"
-    - # dpl --provider=heroku --app=$HEROKU_APP_CLIENT --api-key=$HEROKU_API_KEY
+    # - dpl --provider=heroku --app=$HEROKU_APP_CLIENT --api-key=$HEROKU_API_KEY
     - heroku git:remote -a $HEROKU_APP_CLIENT
     - git push heroku master
   only:
