--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,9 @@ before_script:
   # - echo "Installing heroku" && curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
   # - echo "Installing ruby and gem" && apt-get install -y ruby-dev
   # - gem install dpl
-  - npm install -g heroku-cli
+  - echo "Installing git" && apt install git -y
+  - echo "Installing heroku cli" && npm install -g heroku-cli
+
 
 stages:
   - build
